[gd_scene load_steps=29 format=3 uid="uid://dhbw4id8psw2x"]

[ext_resource type="Script" path="res://scenes/projectile_enemy.gd" id="1_qc1ec"]
[ext_resource type="Shader" uid="uid://dgyq7cwsg1t71" path="res://scenes/projectile_enemy_shader.tres" id="2_h20bx"]
[ext_resource type="Texture2D" uid="uid://c5x3y3dwij6hl" path="res://sprites/wizard.png" id="2_qrv53"]
[ext_resource type="AudioStream" uid="uid://3m2spqupli85" path="res://audio/enemies/Fireball-wizard.ogg" id="3_xg1ty"]
[ext_resource type="AudioStream" uid="uid://b1a3vhhb4bobo" path="res://audio/enemies/enem ded.ogg" id="4_5ugml"]
[ext_resource type="AudioStream" uid="uid://ccso6vbhal1ia" path="res://audio/Player and items/enemy hurt.ogg" id="4_k4m2f"]
[ext_resource type="Texture2D" uid="uid://ue4xpktkuhq4" path="res://sprites/fireparticlespritesheet.png" id="6_qhnuu"]
[ext_resource type="Texture2D" uid="uid://df6jk05ixdd4y" path="res://sprites/light better.png" id="8_vr8su"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6kbya"]
size = Vector2(10, 15)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qtl2s"]
resource_local_to_scene = true
shader = ExtResource("2_h20bx")
shader_parameter/wizbool = false
shader_parameter/projectile_enem_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc4k6"]
atlas = ExtResource("2_qrv53")
region = Rect2(75, 0, 75, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3fc6"]
atlas = ExtResource("2_qrv53")
region = Rect2(0, 0, 75, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_fl7tt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc4k6")
}],
"loop": true,
"name": &"wizard_angy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3fc6")
}],
"loop": true,
"name": &"wizard_chill",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_olidh"]
resource_name = "DIE"
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"ded"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"summonparticle"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PointLight2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2dpc"]
_data = {
"DIE": SubResource("Animation_olidh")
}

[sub_resource type="Animation" id="Animation_4blpw"]
resource_name = "anti_teleport"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("wizard_anim:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, true]
}

[sub_resource type="Animation" id="Animation_sgcid"]
resource_name = "deth"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"ded"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"summonparticle"
}]
}

[sub_resource type="Animation" id="Animation_ddaeo"]
resource_name = "fire_in_the_hole"

[sub_resource type="Animation" id="Animation_2eedi"]
resource_name = "teleport"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wizard_anim:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0eqnl"]
_data = {
"anti_teleport": SubResource("Animation_4blpw"),
"deth": SubResource("Animation_sgcid"),
"fire_in_the_hole": SubResource("Animation_ddaeo"),
"teleport": SubResource("Animation_2eedi")
}

[sub_resource type="Animation" id="Animation_0ug2e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../wizard_anim:material:shader_parameter/wizbool")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pug52"]
resource_name = "wizhitflash"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../wizard_anim:material:shader_parameter/wizbool")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51icc"]
_data = {
"RESET": SubResource("Animation_0ug2e"),
"wizhitflash": SubResource("Animation_pug52")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_50q07"]
atlas = ExtResource("6_qhnuu")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykfyf"]
atlas = ExtResource("6_qhnuu")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wqsp"]
atlas = ExtResource("6_qhnuu")
region = Rect2(60, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_g8toy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50q07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykfyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wqsp")
}],
"loop": false,
"name": &"FIRE IN THE HOOOOOOLE",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4v6rc"]
size = Vector2(208, 198)

[node name="projectile_enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_qc1ec")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_6kbya")
debug_color = Color(0.494118, 0.584314, 0.0117647, 0.419608)

[node name="wait_to_shoot" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="shot" type="Timer" parent="."]
one_shot = true

[node name="aimray" type="RayCast2D" parent="."]

[node name="wizard_anim" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_qtl2s")
position = Vector2(-2, 1.25)
scale = Vector2(0.24, 0.37)
sprite_frames = SubResource("SpriteFrames_fl7tt")
animation = &"wizard_angy"
autoplay = "wizard_chill"

[node name="after_teleport" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FGUCKING DIE" type="AnimationPlayer" parent="."]
root_node = NodePath("../during_teleport")
libraries = {
"": SubResource("AnimationLibrary_g2dpc")
}

[node name="during_teleport" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TANIM" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0eqnl")
}

[node name="wait_for_TP" type="Timer" parent="."]
wait_time = 9.0
one_shot = true
autostart = true

[node name="wait_for_TP_To_DONE" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="wait_before_tp" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="HUZZAH" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xg1ty")
volume_db = 1.7
bus = &"SFX"

[node name="ded lol" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5ugml")
bus = &"SFX"

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k4m2f")
volume_db = -0.3
bus = &"SFX"

[node name="hitflash" type="AnimationPlayer" parent="."]
root_node = NodePath("../fire_anim")
libraries = {
"": SubResource("AnimationLibrary_51icc")
}

[node name="fire_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -2.38419e-07)
scale = Vector2(0.766667, 0.7)
sprite_frames = SubResource("SpriteFrames_g8toy")
animation = &"FIRE IN THE HOOOOOOLE"
frame = 2
frame_progress = 1.0

[node name="sight" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_4v6rc")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.878431, 0.666667, 0.329412, 1)
energy = 0.2
texture = ExtResource("8_vr8su")
texture_scale = 0.7

[connection signal="timeout" from="wait_to_shoot" to="." method="_on_wait_to_shoot_timeout"]
[connection signal="timeout" from="shot" to="." method="_on_shot_timeout"]
[connection signal="timeout" from="after_teleport" to="." method="_on_after_teleport_timeout"]
[connection signal="timeout" from="during_teleport" to="." method="_on_during_teleport_timeout"]
[connection signal="timeout" from="wait_for_TP" to="." method="_on_wait_for_tp_timeout"]
[connection signal="timeout" from="wait_for_TP_To_DONE" to="." method="_on_wait_for_tp_to_done_timeout"]
[connection signal="timeout" from="wait_before_tp" to="." method="_on_wait_before_tp_timeout"]
[connection signal="animation_finished" from="fire_anim" to="." method="_on_fire_anim_animation_finished"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
